--- a/git-secret.yaml
+++ b/git-secret.yaml
@@ -15,10 +15,10 @@ def generate_dummy_password(organization_name, aws_access_key, db_name, db_passw
     return dummy_password
 
 # Organization name
-organization_name = "infosecwonderland"
+query = "infosecwonderland"
 
 # Hardcoded AWS access key
-aws_access_key_id = "ASIAY34FZKBOKMUTVV7A"
+aws_access_key = "ASIAY34FZKBOKMUTVV7A"
 
 # Sample database name and password
 db_name = "sql_infosecwonderland"
