--- a/git-secret.yaml
+++ b/git-secret.yaml
@@ -19,6 +19,7 @@ query = "infosecwonderland"
 
 # Hardcoded AWS access key
 aws_access_key = "ASIAY34FZKBOKMUTVV7A"
+password = P@ssw0rd@0983738
 
 # Sample database name and password
 db_name = "sql_infosecwonderland"
